Re-added needed options